# claude-preauth-hook-ssh-readonly

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  NOTES.md  README.md  pyproject.toml  ssh-readonly.py  test_ssh_readonly.py
tests/: test_ssh_readonly.py
tools/: add-claude-preauth-hook.py  check-suppressions.py  evaluate-command.py
