[project]
name = "ssh-readonly-hook"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
package = false

[project.optional-dependencies]
dev = ["pytest", "ruff", "bandit", "mypy", "pre-commit"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernize syntax)
    "C90",  # mccabe complexity
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.bandit]
skips = ["B101"]  # assert is idiomatic in pytest tests
